Add secure keepalive endpoint for cron-job Render pings

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ HuggingFace_API_KEY=
 # https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
 # You only need this environment variable set if you want to use GPT models
 OPENAI_API_KEY=
+CEREBRAS_API_KEY=
+CEREBRAS_API_BASE_URL=https://api.cerebras.ai/v1
+
 
 # Get your Anthropic API Key in your account settings -
 # https://console.anthropic.com/settings/keys
@@ -120,3 +123,6 @@ VITE_GITHUB_TOKEN_TYPE=classic
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
 DEFAULT_NUM_CTX=
+
+# Optional token for /api/keepalive protection
+KEEPALIVE_TOKEN=
